# llm-orchestrator

./: Cargo.toml  README.md
.github/workflows/: npm-publish.yml
crates/llm-orchestrator-cli/: Cargo.toml
crates/llm-orchestrator-core/: Cargo.toml
crates/llm-orchestrator-core/src/: providers.rs
crates/llm-orchestrator-providers/: Cargo.toml
crates/llm-orchestrator-providers/src/: traits.rs
crates/llm-orchestrator-sdk/: Cargo.toml
npm/llm-orchestrator/: README.md  index.js  package.json
npm/llm-orchestrator-darwin-arm64/: README.md  package.json
npm/llm-orchestrator-darwin-x64/: README.md  package.json
npm/llm-orchestrator-linux-arm64/: README.md  package.json
npm/llm-orchestrator-linux-x64/: README.md  package.json
npm/llm-orchestrator-win32-x64/: package.json
scripts/: fix-and-republish.sh  publish-npm.sh
