[package]
name = "llm-orchestrator-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Core workflow orchestration engine for LLM pipelines"

[dependencies]
# Local crates
llm-orchestrator-providers = { version = "0.1.0", path = "../llm-orchestrator-providers" }
llm-orchestrator-state = { version = "0.1.0", path = "../llm-orchestrator-state", optional = true }

# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
petgraph = { workspace = true }
handlebars = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }

# Observability dependencies
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
reqwest = { workspace = true }

[features]
default = []
state-persistence = ["llm-orchestrator-state"]

[dev-dependencies]
tokio-test = { workspace = true }
mockito = { workspace = true }
