[package]
name = "llm-orchestrator-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Rust SDK for building LLM workflows programmatically"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Local dependencies
llm-orchestrator-core = { version = "0.1.1", path = "../llm-orchestrator-core" }
llm-orchestrator-providers = { version = "0.1.1", path = "../llm-orchestrator-providers" }

[dev-dependencies]
tokio-test = { workspace = true }
